[tool.poetry]
name = "hack36poundsai"
version = "0.1.0"
description = ""
authors = ["thewaker <<>>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.5.1"
mediapipe = "latest"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
